--- a/src/container-queries.htm
+++ b/src/container-queries.htm
@@ -4,40 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Container queries</title>
-
-<style>
-
-/* create container context first  */
-.container {
-    container-type: inline-size;
-}
-.subelement {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    color: blue;
-}
-
-/* styles applied till parent is greater than 500рх */
-@container (max-width: 500px) {
-    .subelement {
-        grid-template-columns: 1fr;
-        color: red;
-        background-color: lightpink;
-    }
-}
-
-</style>
+    <link rel="stylesheet" href="container-queries.css">
 
 
 </head>
 <body>
 
-    <h2>We can catch parent element dimensions to apply styles to its child</h2>
+    <h2>We can <q>catch</q> parent element dimensions to apply styles to its child</h2>
     <div class="container">
         <div class="subelement">
         An awesome image <br>
         Some header info <br>
-        or some description
+        or some description<br><br>
+        See <a href="./container-queries.css"  target="_self">styles file</a> for this sample.
         </dlv>
         </div>
 </body>
