--- a/src/container-queries.htm
+++ b/src/container-queries.htm
@@ -16,6 +16,7 @@
         An awesome image <br>
         Some header info <br>
         or some description<br><br>
+        Try <span class="resize">resizing</span> this page or tab to see it in action.<br>
         See <a href="./container-queries.css"  target="_self">styles file</a> for this sample.
         </dlv>
         </div>
