--- a/src/container-queries.htm
+++ b/src/container-queries.htm
@@ -12,13 +12,13 @@
 
     <h2>We can <q>catch</q> parent element dimensions to apply styles to its child</h2>
     <div class="container">
-        <div class="subelement">
+        <fieldset><legend>Parent of some size</legend><div class="subelement"><fieldset><legend>Child</legend>
         An awesome image <br>
         Some header info <br>
         or some description<br><br>
         Try <span class="resize">resizing</span> this page or tab to see it in action.<br>
         See <a href="./container-queries.css"  target="_self">styles file</a> for this sample.
-        </dlv>
+    </fieldset></dlv></fieldset>
         </div>
 </body>
 </html>
