added style link

--- a/src/style-queries.htm
+++ b/src/style-queries.htm
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h2>Note that card properties are defined by card's style attribute</h2>
+    <h2>Note that card properties are defined by card's <a href="./style-queries.css"  target="_self">style</a> attribute</h2>
     <ul class="card-list">
         <li class="card-container" style="--unpaid: true;">
           <div class="order-card">
