fixed some extra bold formatting

--- a/src/style-queries.htm
+++ b/src/style-queries.htm
@@ -15,7 +15,7 @@
         <li class="card-container" style="--unpaid: true;">
           <div class="order-card">
             <div class="heading">&#8505;&#65039; Order info</div>
-            <div class="status">Order status: Not yet paid order</div>
+            <div class="status">Order status: <span>Not yet paid order</span></div>
             <div class="order-contents">
               Order contents:
               <ul>
@@ -28,7 +28,7 @@
         <li class="card-container" style="--unpaid: true;">
           <div class="order-card">
             <div class="heading">&#8505;&#65039; Order info</div>
-            <div class="status">Order status: Not yet paid order</div>
+            <div class="status">Order status: <span>Not yet paid order</span></div>
             <div class="order-contents">
               Order contents:
               <ul>
@@ -40,7 +40,7 @@
         <li class="card-container" style="--paid: true;">
           <div class="order-card">
             <div class="heading">&#8505;&#65039; Order info</div>
-            <div class="status">Order status: Paid order</div>
+            <div class="status">Order status: <span>Paid order</span></div>
             <div class="order-contents">
                 Order contents:
                 <ul>
