added has selector

--- a/src/container-queries.htm
+++ b/src/container-queries.htm
@@ -18,7 +18,7 @@
         or some description<br><br>
         Try <span class="resize">resizing</span> this page or tab to see it in action.<br>
         See <a href="./container-queries.css"  target="_self">styles file</a> for this sample.
-    </fieldset></dlv></fieldset>
+    </fieldset></fieldset>
         </div>
 </body>
 </html>
