fixed some formatting

--- a/src/has-selector.htm
+++ b/src/has-selector.htm
@@ -13,7 +13,7 @@
         <h1>Querying elements that have specific children is <a href="https://caniuse.com/?search=%3Ahas()" target="_blank" rel="nofollow">supported</a> naturally now</h1>
 
 <table borders="all">
-    <tr><th></th><th></th><th></th></tr>
+    <tr><th>about</th><th>effect</th><th>code</th></tr>
     <tr>
         <td>A card without an image:</td>
         <td>
@@ -38,13 +38,15 @@
         </dlv>
         </td>
         <td>
-            <code>
-                .card:has(img){
-                    border-top: 15px solid blue;
-                    display: flex;
-                    align-items: center;
-                }
-            </code>
+            <kbd>
+                <pre>
+.card:has(img){
+    border-top: 15px solid blue;
+    display: flex;
+    align-items: center;
+}
+            </pre>
+            </kbd>
         </td>
     </tr>
     </section>
