provided explanations for nth of sample

--- a/src/has-selector.htm
+++ b/src/has-selector.htm
@@ -48,7 +48,7 @@
         </td>
     </tr>
     <tr>
-        <td>Inverted condition: a card that does NOT have an image</td>
+        <td>Inverted condition &ndash; a card that does NOT have an image:</td>
         <td>
         <dlv class="card inverted">
             <span class="content">
