removed extra n-of file

--- a/index.htm
+++ b/index.htm
@@ -4,29 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What's new in CSS?</title>
-    <style>
-.card {
-    filter: grayscale(0%);
-    transition: filter 300ms;
-}
-.card:is(:hover, :focus) {
-    filter: grayscale(100%);
-}
-.highlight {
-    background: right / 0% 100% no-repeat
-    linear-gradient(#c1f5ee, #c1f5ee);
-    transition: background-size 500ms;
-}
-.highlight:hover {
-    background: left / 100% 100% no-repeat
-    linear-gradient(#c1f5ee, #c1f5ee);
-}
-
-h1:not(:first-of-type){
-    padding-top: 2rem;
-}
-
-    </style>
+    <link rel="stylesheet" href="./src/general_styles.css">
 </head>
 <body>
     <section>
