fixed some links in first letter

--- a/src/initial-letter.htm
+++ b/src/initial-letter.htm
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>&#127288;&nbsp;nitial letter</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>&#127285;</text></svg>">
+
+    <title>First letter</title>
     <link rel="stylesheet" href="initial-letter.css">
 </head>
 
 <body>
     <section>
-        <h1>Sample of using Initial letter CSS property</h1>
+        <h1>Sample of using first-letter CSS property</h1>
 
 
 
