added text-wrap balance

--- a/src/text-wrap-balance.htm
+++ b/src/text-wrap-balance.htm
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>text-wrap: balance;</title>
+    <title>Text-wrap: balance;</title>
+    <link rel="stylesheet" href="text-wrap-balance.css">
 </head>
+
 <body>
-    
+    <section>
+        <h1>Balancing of heading long text can be enhanced through browser support of <strong>Text-wrap:
+                balance;</strong> CSS property</h1>
+
+        <p align="justify">Try resizig textarea below.</p>
+
+        <div class="resizable" >
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+        </div>
+    </section>
 </body>
+
 </html>
