--- a/src/text-wrap-balance.htm
+++ b/src/text-wrap-balance.htm
@@ -10,14 +10,14 @@
 
 <body>
     <section>
-        <h1>Balancing of heading long text can be enhanced through browser support of <strong>Text-wrap:
+        <h1>Balancing of heading long text can be enhanced through browser <a href="https://caniuse.com/?search=Text-wrap%3A%20balance%3B" target="_blank" rel="nofollow" >support</a> of <strong>Text-wrap:
                 balance;</strong> CSS property</h1>
 
         <p align="justify">Try resizig textarea below.</p>
 
         <div class="resizable" >
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+            <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime, error nulla repudiandae aperiam mollitia! Quis dolore a sit odit quod eligendi itaque placeat aspernatur, tenetur, et repellendus omnis cum.</h1>
+            <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime, error nulla repudiandae aperiam mollitia! Quis dolore a sit odit quod eligendi itaque placeat aspernatur, tenetur, et repellendus omnis cum.</h1>
         </div>
     </section>
 </body>
