--- a/src/text-wrap-balance.htm
+++ b/src/text-wrap-balance.htm
@@ -13,7 +13,7 @@
         <h1>Balancing of heading long text can be enhanced through browser <a href="https://caniuse.com/?search=Text-wrap%3A%20balance%3B" target="_blank" rel="nofollow" >support</a> of <strong>Text-wrap:
                 balance;</strong> CSS property</h1>
 
-        <p align="justify">Try resizig the elemint below.</p>
+        <p align="justify">Try resizig the element below.</p>
 
         <div class="resizable" >
             <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime, error nulla repudiandae aperiam mollitia! Quis dolore a sit odit quod eligendi itaque placeat aspernatur, tenetur, et repellendus omnis cum.</h1>
