fixed extra ghost tag

--- a/index.htm
+++ b/index.htm
@@ -45,7 +45,7 @@
             <strong>Text-wrap: balance;</strong> CSS property. <a href="src/text-wrap-balance.htm" target="_blank" >Demo page</a>
         </p>
     
-        <h1>n<sup><u>th</u>u></sup> child <strong>of</strong></h1>
+        <h1>n<sup><u>th</u></sup> child <strong>of</strong></h1>
         <p align="justify">
             CSS enables us to query on pre-selected elements in n-th pseudo selector constructions. <a href="src/n-of.htm" target="_blank" >Demo page</a>
         </p>
