added description for text wrap balance

--- a/src/text-wrap-balance.htm
+++ b/src/text-wrap-balance.htm
@@ -10,14 +10,22 @@
 
 <body>
     <section>
-        <h1>Balancing of heading long text can be enhanced through browser <a href="https://caniuse.com/?search=Text-wrap%3A%20balance%3B" target="_blank" rel="nofollow" >support</a> of <strong>Text-wrap:
+        <h1>Balancing of heading long text can be enhanced through browser <a
+                href="https://caniuse.com/?search=Text-wrap%3A%20balance%3B" target="_blank" rel="nofollow">support</a>
+            of <strong>Text-wrap:
                 balance;</strong> CSS property</h1>
 
         <p align="justify">Try resizig the element below.</p>
+        <p align="justify">To 'balance' text with this property end user's browser performs effective binary search of a
+            minimum width that wouldn't trigger new line and then uses this value in sequential breaks adjustments.</p>
 
-        <div class="resizable" >
-            <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime, error nulla repudiandae aperiam mollitia! Quis dolore a sit odit quod eligendi itaque placeat aspernatur, tenetur, et repellendus omnis cum.</h1>
-            <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime, error nulla repudiandae aperiam mollitia! Quis dolore a sit odit quod eligendi itaque placeat aspernatur, tenetur, et repellendus omnis cum.</h1>
+        <div class="resizable">
+            <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime, error nulla repudiandae
+                aperiam mollitia! Quis dolore a sit odit quod eligendi itaque placeat aspernatur, tenetur, et
+                repellendus omnis cum.</h1>
+            <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus maxime, error nulla repudiandae
+                aperiam mollitia! Quis dolore a sit odit quod eligendi itaque placeat aspernatur, tenetur, et
+                repellendus omnis cum.</h1>
         </div>
     </section>
 </body>
